# morphify

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml
morphify/: __init__.py  template_morpher.py
morphium/: __init__.py  template_morpher.py  value_morpher.py
tests/: test_more_coverage.py  test_template_morpher.py  test_value_morpher.py
