[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "morphify"
version = "0.1.2"
description = "Lightweight templating and value formatting utilities"
readme = "README.md"
keywords = [
    "data-transformation",
    "date-formatting",
    "dynamic-rendering",
    "expression-evaluation",
    "string-formatting",
    "template",
    "templating",
    "text-processing",
]

license = { text = "MIT" }
maintainers = [ { name = "bubaley", email = "bubaley.fu@gmail.com" } ]
authors = [ { name = "bubaley", email = "bubaley.fu@gmail.com" } ]

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [  ]

urls.Documentation = "https://github.com/bubaley/morphify#readme"
urls.Homepage = "https://github.com/bubaley/morphify"
urls.Repository = "https://github.com/bubaley/morphify.git"

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]

[tool.hatch.build.targets.wheel]
packages = [ "morphify" ]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4
fix = true
format.quote-style = "single"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
lint.extend-select = [ "I" ]
lint.extend-per-file-ignores."core/settings/*.py" = [ "F403", "F405" ]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [ "tests" ]
pythonpath = [ "." ]

[tool.coverage.run]
branch = true
source = [ "morphify" ]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[tool.coverage.paths]
source = [
    "morphify",
    ".*/site-packages/morphify",
]

[tool.bandit]
skips = [ "B101" ]
exclude_dirs = [ "tests" ]
